test: fix compilation errors in test files after data permission removal
- Fix duplicate content in GenTemplateCommandServiceTest, WipeGenColumnsByIdsDomainServiceImplTest, RestoreSysRoleByIdDomainServiceImplTest
- Fix SecurityUtils.concurrency() mock in DeleteSysMenuByIdDomainServiceImplTest, DeleteSysDictItemByIdDomainServiceImplTest
- Fix GenColumnBindBasicInfo constructor args type mismatch
- Fix MenuExtendInfo constructor args type mismatch
- Fix RequestPath/PathContainer mock in AuthorizationManagerConfigTest
- Fix CustomAuthenticationEntryPointTest mock usage
- Fix all NoSuchMethodException declarations in getDeclaredMethod tests
- Remove invalid SpringDDDLauncherApplicationTest (no launcher dependency)
- Remove invalid GenTableInfoQueryService/1Test (path/package conflict)